project(c64emu)
cmake_minimum_required(VERSION 3.7)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

find_package(GTest REQUIRED)
include_directories(. ${GTEST_INCLUDE_DIRECTORIES})
file(GLOB SRC_FILES *.cpp)
file(GLOB TEST_SRC_FILES test/*.cpp)
add_executable(c64emu ${SRC_FILES} ${TEST_SRC_FILES})
target_link_libraries(c64emu SDL2 ${GTEST_LIBRARIES} pthread)
